Swapped out uses of the (as-of JDK 16) deprecated Integer constructors in favour of the suggested replacement Integer.valueOf.