@@ -2,6 +2,6 @@
 public class Issue2353 {
 
   public static void play() {
-    Integer a = new Integer("2");
+    Integer a = Integer.valueOf("2");
   }
 }
